<?xml version="1.0" encoding="utf-8"?>

<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.triptrendyapp.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/activity_map_fragment" />

    <fragment
        android:id="@+id/nav_route"
        android:name="com.example.triptrendyapp.ui.route.RouteFragment"
        android:label="@string/menu_route"
        tools:layout="@layout/activity_route_fragment" />

    <fragment
        android:id="@+id/nav_ramdom"
        android:name="com.example.triptrendyapp.ui.ramdom.RamdomFragment"
        android:label="@string/menu_ramdom"
        tools:layout="@layout/activity_ramdom_fragment" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.triptrendyapp.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/activity_favorite_fragment" />

    <fragment
        android:id="@+id/nav_myLocation"
        android:name="com.example.triptrendyapp.ui.myLocation.MyLocationFragment"
        android:label="@string/menu_myLocation"
        tools:layout="@layout/activity_my_location_fragment" />

    <fragment
        android:id="@+id/nav_pulication"
        android:name="com.example.triptrendyapp.ui.pulication.PublicationFragment"
        android:label="@string/menu_pulication"
        tools:layout="@layout/activity_publication_fragment" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.triptrendyapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/activity_my_location_fragment" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.example.triptrendyapp.ui.weather.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/activity_weather_fragment" />

    <fragment
        android:id="@+id/nav_signOff"
        android:name="com.example.triptrendyapp.ui.signOff.SingOffFragment"
        android:label="@string/menu_signOff"
        tools:layout="@layout/activity_signoff_fragment" />

</navigation>