<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#FFFFFF"
        tools:context=".MainActivitySignInPhone">

        <ImageButton
            android:id="@+id/ibtnAtrasInicioSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/arrow_back_fill0_wght400_grad0_opsz24"
            app:tint="#009DFD" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cLayout3"
            android:layout_width="370dp"
            android:layout_height="640dp"
            android:background="@drawable/esquina_redondeada_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494">

            <TextView
                android:id="@+id/tViewCodigoVerificacion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FD0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.602" />

            <TextView
                android:id="@+id/tViewInicioSesionTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/cabecera_inicio_sesion_telefono"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.026" />

            <TextView
                android:id="@+id/tViewInicioSesionTelefono1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/cuerpo_inicio_sesion_telefono"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.099" />

            <Spinner
                android:id="@+id/spinnerPaises"
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:textColor="#042E44"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.542"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.191" />

            <EditText
                android:id="@+id/eTextNumeroTelefono"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:fontFamily="sans-serif-black"
                android:background="@drawable/esquina_redondeada_edit_text"
                android:backgroundTint="#EAE5E5"
                android:ems="10"
                android:hint="@string/hint_numero_telefono"
                android:inputType="number"
                android:maxLength="9"
                android:paddingLeft="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.321" />

            <TextView
                android:id="@+id/tViewNumeroTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.417" />

            <Button
                android:id="@+id/btnObtenerCodigo"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:backgroundTint="#FDF6FE"
                android:fontFamily="sans-serif-black"
                android:text="@string/boton_obtener_codigo_verificacion"
                android:textColor="#042E44"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.516" />

            <EditText
                android:id="@+id/eTextCodigoVerificacion"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:fontFamily="sans-serif-black"
                android:background="@drawable/esquina_redondeada_edit_text"
                android:backgroundTint="#EAE5E5"
                android:ems="10"
                android:hint="@string/hint_codigo_verificacion"
                android:inputType="textPassword"
                android:maxLength="6"
                android:paddingLeft="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.717" />

            <TextView
                android:id="@+id/tViewCodigoVerificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FD0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.795" />

            <Button
                android:id="@+id/btnVerificarCodigo"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:backgroundTint="#FDF6FE"
                android:fontFamily="sans-serif-black"
                android:text="@string/validacion_codigo_verificacion"
                android:textColor="#042E44"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.91" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>