<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FDFDFD"
        tools:context=".MainActivitySignUp">

        <ImageButton
            android:id="@+id/ibtnAtrasMain1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FDF6FE"
            android:tint="#009EFE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            app:srcCompat="@drawable/arrow_back_fill0_wght400_grad0_opsz24" />

        <TextView
            android:id="@+id/tViewCrearCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/cabecera_crear_cuenta"
            android:textColor="#009EFE"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/cLayout1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.191"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tViewCrearCuenta1"
            android:layout_width="335dp"
            android:layout_height="79dp"
            android:layout_marginTop="116dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/cuerpo_crear_cuenta"
            android:textColor="#009EFE"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/cLayout1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            tools:ignore="UnknownIdInLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cLayout2"
            android:layout_width="match_parent"
            android:layout_height="512dp"
            android:background="@drawable/esquina_redondeada_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <EditText
                android:id="@+id/eTextCorreoElectronico1"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:fontFamily="sans-serif-black"
                android:background="@drawable/esquina_redondeada_edit_text"
                android:backgroundTint="#EAE5E5"
                android:ems="10"
                android:hint="@string/hint_correo_electronico"
                android:inputType="text"
                android:paddingLeft="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.126" />

            <TextView
                android:id="@+id/tViewCorreoElectronico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.255" />

            <EditText
                android:id="@+id/eTextContrasenya1"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:fontFamily="sans-serif-black"
                android:background="@drawable/esquina_redondeada_edit_text"
                android:backgroundTint="#E9E4E4"
                android:ems="10"
                android:hint="@string/hint_contrasenya"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.34" />

            <ImageButton
                android:id="@+id/ibtnInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#009DFD"
                android:tint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.363"
                app:srcCompat="@drawable/info_fill0_wght400_grad0_opsz24" />

            <ImageButton
                android:id="@+id/ibtnVisibilidadContrasenya1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#009EFE"
                android:tint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.361"
                app:srcCompat="@drawable/visibility_off_fill0_wght400_grad0_opsz24" />

            <TextView
                android:id="@+id/tVIewContrasenya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onClickshowPasswordRulesDialog"
                android:textColor="#FF0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466" />

            <EditText
                android:id="@+id/eTextContrasenya2"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:fontFamily="sans-serif-black"
                android:background="@drawable/esquina_redondeada_edit_text"
                android:backgroundTint="#E9E4E4"
                android:ems="10"
                android:hint="@string/hint_repetir_contrasenya"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.581" />

            <ImageButton
                android:id="@+id/ibtnVisibilidadContrasenya2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#009EFE"
                android:tint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.576"
                app:srcCompat="@drawable/visibility_off_fill0_wght400_grad0_opsz24" />

            <TextView
                android:id="@+id/tViewContrasenya1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.671" />

            <Button
                android:id="@+id/btnCrearCuenta2"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:backgroundTint="#FDF6FE"
                android:fontFamily="sans-serif-black"
                android:text="@string/boton_crear_cuenta"
                android:textColor="#042E44"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.792" />

            <Button
                android:id="@+id/btnIniciarSesion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:backgroundTint="#009DFD"
                android:textSize="15sp"
                android:text="@string/boton_iniciar_sesion_sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.965" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>